# mcps

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/mcp-shared/: Cargo.toml
crates/mcp-shared/src/: lib.rs
crates/ssh-mcp/: Cargo.toml  Dockerfile  README.md  config.example.toml
crates/ssh-mcp/src/: config.rs  main.rs  mcp.rs  ssh.rs
