[package]
name = "ssh-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = "0.8.5"
mcp-shared = { path = "../mcp-shared" }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
